--- a/ReservationViewer/nbproject/private/private.properties
+++ b/ReservationViewer/nbproject/private/private.properties
@@ -1,2 +1,2 @@
 compile.on.save=true
-user.properties.file=C:\\Users\\sad\\AppData\\Roaming\\NetBeans\\8.1\\build.properties
+user.properties.file=C:\\Users\\958015657.ACS.002\\AppData\\Roaming\\NetBeans\\8.1\\build.properties
