--- a/ReservationViewer/ReservationViewer/nbproject/project.properties
+++ b/ReservationViewer/ReservationViewer/nbproject/project.properties
@@ -27,9 +27,11 @@ dist.dir=dist
 dist.jar=${dist.dir}/ReservationViewer.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
+file.reference.Calendar.jar=Calendar.jar
 includes=**
 jar.compress=false
-javac.classpath=
+javac.classpath=\
+    ${file.reference.Calendar.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
